<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">Interaktive Präsentation</string>
    <string name="launcher_title_fav">Interaktive Präsentation</string>
    <string name="launcher_title_qr">IV QR-Code</string>
    <string name="hello_world">Hello world!</string>
    <string name="actionbar_icon_cd">@string/app_name</string>
    <string name="actionbar_add_cd">Hinzufügen</string>
    <string name="actionbar_back_cd">Zurück</string>
    <!-- ENDE Global -->


    <!-- ListCourses -->
    <string name="title_activity_list_courses">Meine Vorlesungen</string>
    <string name="list_courses_emptyList">Zum hinzufügen einer Vorlesung, das + drücken!</string>
    <!-- ENDE ListCourses -->


    <!-- SearchCourse -->
    <string name="title_activity_search_course">Vorlesung hinzufügen</string>
    <string name="et_empty">Suchen</string>
    <!-- ENDE SearchCourse -->


    <!-- CoursePreview -->
    <string name="btn_course_add">Vorlesung hinzufügen</string>
    <string name="dialog_pw_title">Die Vorlesung ist Passwortgeschützt!</string>
    <string name="dialog_pw_hint">Passwort</string>
    <string name="dialog_btn_ok">Hinzufügen</string>
    <string name="dialog_btn_cancel">Abbrechen</string>
    <!-- Ende CoursePreview -->


    <!-- CourseDetails -->
    <string name="title_activity_course_details">CourseDetails</string>
    <string name="course_details_sessiontab">DETAILS</string>
    <string name="course_details_detailstab">TERMINE</string>
    <!-- ENDE CourseDetails -->
    <!-- CourseDetailsDetails -->
    <string name="short_info">Kurzbeschreibung:</string>
    <!-- ENDE CourseDetailsDetails -->


    <!-- PdfReader -->
    <string name="title_activity_pdf_reader">PdfReader</string>
    <!-- ENDE PdfReader -->

    <string name="menu_settings">Settings</string>
    <string name="openPDF">PDF-Viewer starten</string>
    <string name="exit">App beenden</string>
    <string name="title_activity_course_details_details">CourseDetails_details</string>
    <string name="title_activity_course_details_sessions">CourseDetails_sessions</string>
    <string name="title_activity_session_start">Vorlesung läuft!</string>
    <string name="pw">Passwort</string>
    <string name="title_activity_course_preview">CoursePreview</string>
    <string name="title_activity_transaction_type">Vorgansart wählen</string>
    <string name="title_activity_list_sessions">ListSessions</string>

</resources>