<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <RelativeLayout
        android:id="@+id/actionbar"
        style="@style/Titlebar"
        android:layout_alignParentTop="true"
        android:gravity="top" >
		<ImageButton 
		    android:id="@+id/actionbar_logo"
		    android:src="@drawable/actionbar_logo"
		    style="@style/Titlebar.Logo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:contentDescription="@string/actionbar_icon_cd"
		    android:layout_alignParentLeft="true"
		/>
        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/actionbar_back_cd"
            android:src="@drawable/actionbar_up" />
        
    </RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world"
        tools:context=".Session_start" />

</RelativeLayout>
