<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
    android:id="@+id/actionbar"
    android:layout_alignParentTop="true"
    style="@style/Titlebar"
    >

        <ImageView
            android:id="@+id/actionbar_logo"
            style="@style/Titlebar.Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/actionbar_icon_cd"
            android:src="@drawable/actionbar_logo" />

        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:contentDescription="@string/actionbar_back_cd"
            android:onClick="actionbarClick"
            android:src="@drawable/actionbar_up" />

        <TextView 
        android:id="@+id/actionbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_toRightOf="@id/actionbar_logo"
        android:layout_alignBottom="@id/actionbar_logo"
        android:text="@string/title_activity_search_course"
        style="@style/Titlebar.Title"
        />

    </RelativeLayout>
    <ImageButton 
	    android:id="@+id/btn_search"
	    android:layout_width="48dp"
	    android:layout_height="48dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/actionbar"
	    android:src="@android:drawable/ic_menu_search"
	    android:onClick="actionbarClick"
	/>
	<EditText 
	android:id="@+id/et_search"
	android:layout_below="@id/actionbar"
	android:layout_toLeftOf="@id/btn_search"
	android:layout_alignParentLeft="true"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:hint="@string/et_empty"
	/>
    <ListView 
		android:layout_alignParentBottom="true"
		android:layout_below="@id/et_search"
		android:id="@+id/lv_courses" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:fadeScrollbars="true"
		/>

</RelativeLayout>
