<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <RelativeLayout
        android:id="@+id/actionbar"
        style="@style/Titlebar"
        android:layout_alignParentTop="true"
        android:gravity="top" >
		<ImageButton 
		    android:id="@+id/actionbar_logo"
		    android:src="@drawable/ic_menu_iv"
		    style="@style/Titlebar.Logo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:contentDescription="@string/actionbar_icon_cd"
		    android:layout_alignParentLeft="true"
		/>
        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/actionbar_back_cd"
            android:src="@drawable/actionbar_up" />
        
        <ImageButton
        android:id="@+id/btn_action_info"
        android:src="@drawable/ic_menu_info"
        android:contentDescription="@string/actionbar_add_cd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:layout_marginRight="4dp"
        />
        
    </RelativeLayout>
    
    
    <TabHost 
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
	android:layout_below="@id/actionbar">
	<RelativeLayout android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TabWidget
            android:id="@android:id/tabs"
            style="@style/TabStyle"            
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
             />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="65dp" 
            
            />
     </RelativeLayout>
</TabHost>

</RelativeLayout>