<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:id="@+id/actionbar"
        style="@style/Titlebar"
        android:layout_alignParentTop="true"
        android:gravity="top" >
		<ImageButton 
		    android:id="@+id/actionbar_logo"
		    android:src="@drawable/ic_menu_iv"
		    style="@style/Titlebar.Logo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:contentDescription="@string/actionbar_icon_cd"
		    android:layout_alignParentLeft="true"
		/>
        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/actionbar_back_cd"
            android:src="@drawable/actionbar_up" 
            android:onClick="actionbarClick"
            />
        
        
        
        <ImageButton
        android:id="@+id/btn_action_info"
        android:src="@drawable/ic_menu_info"
        android:contentDescription="@string/actionbar_add_cd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:layout_marginRight="4dp"
        android:onClick="actionbarClick"
        />
        <ImageButton
        android:id="@+id/btn_action_fav"
        android:src="@drawable/ic_menu_star_off"
        android:contentDescription="@string/actionbar_add_cd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btn_action_info"
        android:layout_centerVertical="true"
        android:background="@null"
        android:layout_marginRight="4dp"
        android:onClick="actionbarClick"
        />
        
    </RelativeLayout>
    
    <ListView 
		android:layout_alignParentBottom="true"
		android:layout_below="@id/actionbar"
		android:id="@+id/lv_sessions" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:fadeScrollbars="true"/>
    <ScrollView
        android:id="@+id/sv_course_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:visibility="gone"
        >
	    <TextView 
	        android:id="@+id/tx_course_details"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        />
    </ScrollView>
    

</RelativeLayout>
