<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <RelativeLayout
        android:id="@+id/actionbar"
        style="@style/Titlebar"
        android:layout_alignParentTop="true"
        android:gravity="top" >
		<ImageView
            android:id="@+id/actionbar_logo"
            style="@style/Titlebar.Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/actionbar_icon_cd"
            android:src="@drawable/ic_menu_iv" />

        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:contentDescription="@string/actionbar_back_cd"
            android:onClick="actionbarClick"
            android:src="@drawable/actionbar_up" />

        <TextView 
        android:id="@+id/actionbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_toRightOf="@id/actionbar_logo"
        android:layout_alignBottom="@id/actionbar_logo"
        android:text="@string/title_activity_session_start"
        style="@style/Titlebar.Title"
        />

        <ImageButton
            android:id="@+id/btn_session_start_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="22dp"
            android:background="@null"
            android:src="@android:drawable/ic_menu_help" />
        
    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/viewFlipper1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#222222"
        android:paddingTop="100dp" >

    </ViewFlipper>

    <ImageButton
        android:id="@+id/btn_session_start_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/viewFlipper1"
        android:background="@null"
        android:src="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/btn_session_start_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/viewFlipper1"
         android:background="@null"
        android:src="@android:drawable/ic_media_next" />

    <TextView
        android:id="@+id/tx_session_start_question"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_session_start_previous"
        android:paddingTop="10dp"
        android:background="#FFF"
        android:text="Frage" />

  
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tx_session_start_question"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_session_start_a1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:onClick="answeredHandler"
            android:text="Antwort" />

           <Button
        android:id="@+id/btn_session_start_a2"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:background="@drawable/btn_style"
        android:onClick="answeredHandler"
        android:text="Antwort" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
		android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_session_start_a3"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:onClick="answeredHandler"
            android:text="Antwort" />

           <Button
        android:id="@+id/btn_session_start_a4"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:background="@drawable/btn_style"
        android:onClick="answeredHandler"
        android:text="Antwort" />
    </LinearLayout>

</RelativeLayout>
